use $HOME instead of ~

--- a/.screenrc
+++ b/.screenrc
@@ -24,10 +24,10 @@ vbell_msg "   Wuff  ----  Wuff!!  "
 # only difference should be the slightly modified syntax, and check for
 # terminfo entries, that are already corected in the database.
 #
-# G0 	we have a SEMI-GRAPHICS-CHARACTER-MODE
-# WS	this sequence resizes our window.
+# G0    we have a SEMI-GRAPHICS-CHARACTER-MODE
+# WS    this sequence resizes our window.
 # cs    this sequence changes the scrollregion
-# hs@	we have no hardware statusline. screen will only believe that
+# hs@   we have no hardware statusline. screen will only believe that
 #       there is a hardware status line if hs,ts,fs,ds are all set.
 # ts    to statusline
 # fs    from statusline
@@ -265,35 +265,4 @@ caption always "%H %c | %3n %t%? @%u%?%? [%h]%?%=%c"
 hardstatus alwaysignore
 hardstatus alwayslastline '%{bW}%-w%{.wB}%n %t%{-}%+w %=%{.w}'
 
-#auto open tabs
-#1
-#chdir /home/wangshijun
-#screen -t Irssi
-#exec irssi
-
-#2
-# chdir /home/sankuai/www.jsLib/yui/3.3.0/build/
-# screen -t YUI3
-
-#3
-# chdir /home/wangshijun/dev/javascript
-# screen -t jQuery
-
-#4
-# chdir /home/wangshijun/mt
-# screen -t Git
-
-#4
-# chdir /home/wangshijun/mt
-# screen -t Develop
-
-#3
-#chdir /home/wangshijun/mtstat
-#screen -t stat
-#exec git checkout master
-
-#3
-#chdir /home/wangshijun
-#screen -t db
-#exec db
-
+[ -r "$HOME/.screen.local" ] && source $HOME/.screen.local
