--- a/.gitconfig
+++ b/.gitconfig
@@ -1,31 +1,62 @@
+# local user config, usernames, etc
+[include]
+    path=$HOME/.gitconfig.local
+
 [alias]
     # View the SHA, description, and history graph of the latest 20 commits
     log = log --pretty=oneline -n 20 --graph
+
+    # various pretty loggers from various places
+    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+    lc = log ORIG_HEAD.. --stat --no-merges
+
+    # from http://blog.kfish.org/2010/04/git-lola.html
+    lol = log --graph --decorate --pretty=oneline --abbrev-commit
+    lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
+    ll = log --graph --date=short
+
+    # from https://git.wiki.kernel.org/index.php/Aliases
+    whois = "!sh -c 'git log -i -1 --pretty=\"format:%an <%ae>\n\" --author=\"$1\"' -"
+    whatis = show -s --pretty='tformat:%h (%s, %ad)' --date=short
+
     # View the current working tree status using the short format
     st = status
+
     # Show the diff between the latest commit and the current state
     d = !"git diff-index --quiet HEAD -- || clear; git diff --patch-with-stat"
+
     # `git di $number` shows the diff between the state `$number` revisions ago and the current state
     di = !"d() { git diff --patch-with-stat HEAD~$1; }; git diff-index --quiet HEAD -- || clear; d"
+
     # Pull in remote changes for the current repository and all its submodules
     p = !"git pull; git submodule foreach git pull origin master"
+
     # Clone a repository including all submodules
     clone = clone --recursive
+
     # Commit changes
     ci = commit
     cia = !git add -A && git commit -av
+
     # Switch to a branch, creating it if necessary
     go = checkout -B
     co = checkout
+
+    # add line number for grep
+    grep = grep -n
+
     # Show verbose output about tags, branches or remotes
     br = branch
     tags = tag -l
     branches = branch -a
     remotes = remote -v
+
     # Credit an author on the latest commit
     credit = "!f() { git commit --amend --author \"$1 <$2>\" -C HEAD; }; f"
+
     # Interactive rebase with the given number of latest commits
     reb = "!r() { git rebase -i HEAD~$1; }; r"
+
     # Undo a `git push`
     undopush = push -f origin HEAD^:master
 
@@ -43,19 +74,23 @@
 [color]
     # Use colors in Git commands that are capable of colored output when outputting to the terminal
     ui = auto
+
 [color "branch"]
     current = yellow reverse
     local = yellow
     remote = green
+
 [color "diff"]
     meta = yellow bold
     frag = magenta bold
     old = red bold
     new = green bold
+
 [color "status"]
     added = yellow
     changed = green
     untracked = cyan
+
 [merge]
     # Include summaries of merged commits in newly created merge commit messages
     log = true
@@ -70,12 +105,15 @@
     insteadOf = "gh:"
     pushInsteadOf = "github:"
     pushInsteadOf = "git://github.com/"
+
 [url "git://github.com/"]
     insteadOf = "github:"
+
 [url "git@gist.github.com:"]
     insteadOf = "gst:"
     pushInsteadOf = "gist:"
     pushInsteadOf = "git://gist.github.com/"
+
 [url "git://gist.github.com/"]
     insteadOf = "gist:"
 
