--- a/.screenrc
+++ b/.screenrc
@@ -265,4 +265,4 @@ caption always "%H %c | %3n %t%? @%u%?%? [%h]%?%=%c"
 hardstatus alwaysignore
 hardstatus alwayslastline '%{bW}%-w%{.wB}%n %t%{-}%+w %=%{.w}'
 
-[ -r "$HOME/.screenrc.local" ] && source $HOME/.screenrc.local
+source $HOME/.screenrc.local
