--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 # local user config, usernames, etc
 [include]
-    path=$HOME/.gitconfig.local
+    path=~/.gitconfig.local
 
 [alias]
     # View the SHA, description, and history graph of the latest 20 commits
