--- a/.gitmodules
+++ b/.gitmodules
@@ -19,7 +19,7 @@
 [submodule ".vim/bundle/vim-powerline"]
     path = .vim/bundle/vim-powerline
     url = git://github.com/Lokaltog/vim-powerline.git
-[submodule ".vim/bundle/zencoding-vim"]
+[submodule ".vim/bundle/emmet-vim"]
     path = .vim/bundle/emmet-vim
     url = git://github.com/mattn/emmet-vim.git
 [submodule ".vim/bundle/golden-view"]
