--- a/.gitmodules
+++ b/.gitmodules
@@ -16,9 +16,6 @@
 [submodule ".vim/bundle/tcomment_vim"]
     path = .vim/bundle/tcomment_vim
     url = git://github.com/tomtom/tcomment_vim.git
-[submodule ".vim/bundle/vim-powerline"]
-    path = .vim/bundle/vim-powerline
-    url = git://github.com/Lokaltog/vim-powerline.git
 [submodule ".vim/bundle/golden-view"]
     path = .vim/bundle/golden-view
     url = git://github.com/zhaocai/GoldenView.Vim.git
@@ -37,3 +34,6 @@
 [submodule ".vim/bundle/emmet-vim"]
 	path = .vim/bundle/emmet-vim
 	url = https://github.com/mattn/emmet-vim.git
+[submodule ".vim/bundle/vim-airline"]
+	path = .vim/bundle/vim-airline
+	url = https://github.com/bling/vim-airline
