add plugin: vim-jsbeautify

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule ".vim/bundle/vim-javascript"]
     path = .vim/bundle/vim-javascript
     url = https://github.com/pangloss/vim-javascript.git
+[submodule ".vim/bundle/vim-jsbeautify"]
+	path = .vim/bundle/vim-jsbeautify
+	url = https://github.com/maksimr/vim-jsbeautify.git
